--- a/.github/workflows/h68k-armv8.yml
+++ b/.github/workflows/h68k-armv8.yml
@@ -6,7 +6,7 @@
 # https://github.com/P3TERX
 #===============================================
 
-name: ARMv8 Mini OpenWrt
+name: h68k-armv8
 
 on:
   workflow_dispatch:
