--- a/.github/workflows/h68k-armv8.yml
+++ b/.github/workflows/h68k-armv8.yml
@@ -10,8 +10,8 @@ name: h68k-armv8
 
 on:
   workflow_dispatch:
-#  schedule:
-#    - cron: 0 22 * * *
+  schedule:
+    - cron: 0 20 * * 6
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
